Fix image alignment

--- a/client/src/components/detail/activity.css
+++ b/client/src/components/detail/activity.css
@@ -41,7 +41,7 @@ img{
 .image img{
   width: 500px;
   position: absolute;
-  right: 0;
+  right: 10;
 
 }
 
